--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -4,6 +4,8 @@ html, body {
     margin: 0;
     padding: 0;
     width: 100%;
+    height: 50%;
+
 }
 
 body {
@@ -14,9 +16,13 @@ body {
 header {
     width: 100%;
     height: 100vh;
-    background: url("../image/BG.jpg") no-repeat 50% 50%;
     background-size: cover;
+    background: url("../image/BG.jpg") no-repeat 50% 60%;
+ 
+
 }
+
+
 
 .content {
     width: 90%;
@@ -46,7 +52,7 @@ nav {
 nav ul {
     line-height: 60px;
     list-style: none;
-    background: rgba(0, 0, 0, 0);
+    background: rgba(50, 0, 80, 0.2);
     overflow: hidden;
     color: #fff;
     text-align: right;
@@ -84,7 +90,7 @@ nav ul li a {
 
 .container {
     position: relative;
-    margin: calc(75px + 2vh + 2vw) auto 0 auto;
+    margin: calc(5px + 2vh + 2vw) auto 0 auto;
     padding: 0;
     width: 100%;
     max-width: 840px;
@@ -174,7 +180,7 @@ nav ul li a {
 
 .border {
     fill: none;
-    stroke: #691fe6;
+    stroke: #320050;
     stroke-width: 5;
     stroke-miterlimit: 10;
 }
@@ -208,7 +214,7 @@ nav ul li a {
     border: none;
     background: rgba(255, 255, 255, 0);
     padding: 0 68px 0 68px;
-    color: #691fe6;
+    color: #320050;
     font-size: 1.32em;
     font-weight: 400;
     letter-spacing: -0.015em;
@@ -240,13 +246,25 @@ nav ul li a {
     color: #691fe6;
     background: rgba(0, 0, 0, 0.25);
 }
+@media (max-width: 1200px) {
 
+    nav ul li {
+        display: inline-block;
+        padding: 16px 10px;;
+    }
 
-@media (max-width: 1500px) {
+    nav ul li a {
+        text-decoration: none;
+        color: #fff;
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 720px) {
     .logo {
         position: fixed;
         top: 0;
-        margin-top: 16px;
+        margin-top: 10px;
         font-size: 40px;
     }
 
