--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -15,13 +15,11 @@ body {
 
 header {
     width: 100%;
-    height: 100vh;
+    height: 70vh;
     background-size: cover;
     background: url("../image/BG.jpg") no-repeat 50% 60%;
 
-
 }
-
 
 
 .content {
@@ -62,7 +60,7 @@ nav ul {
 }
 
 nav.black ul {
-    background: #230933;
+    background: #c7ceea;
 }
 
 nav ul li {
@@ -79,7 +77,7 @@ nav ul li a {
 .menu-icon {
     line-height: 60px;
     width: 100%;
-    background: #230933;
+    background: #c7ceea;
     text-align: right;
     box-sizing: border-box;
     padding: 15px 24px;
@@ -180,7 +178,7 @@ nav ul li a {
 
 .border {
     fill: none;
-    stroke: #320050;
+    stroke: #ffb7b2;
     stroke-width: 5;
     stroke-miterlimit: 10;
 }
@@ -214,7 +212,7 @@ nav ul li a {
     border: none;
     background: rgba(255, 255, 255, 0);
     padding: 0 68px 0 68px;
-    color: #320050;
+    color: #ffb7b2;
     font-size: 1.32em;
     font-weight: 400;
     letter-spacing: -0.015em;
@@ -222,30 +220,31 @@ nav ul li a {
 }
 
 #search::-webkit-input-placeholder {
-    color: #691fe6;
+    color: #ffb7b2;
 }
 
 #search::-moz-placeholder {
-    color: #691fe6;
+    color: #ffb7b2;
 }
 
 #search:-ms-input-placeholder {
-    color: #691fe6;
+    color: #ffb7b2;
 }
 
 #search:-moz-placeholder {
-    color: #691fe6;
+    color: #ffb7b2;
 }
 
 #search::-moz-selection {
-    color: #691fe6;
+    color: #ffb7b2;
     background: rgba(0, 0, 0, 0.25);
 }
 
 #search::selection {
-    color: #691fe6;
+    color: #ffb7b2;
     background: rgba(0, 0, 0, 0.25);
 }
+
 @media (max-width: 1200px) {
 
     nav ul li {
@@ -260,7 +259,16 @@ nav ul li a {
     }
 }
 
-@media (max-width: 720px) {
+@media (max-width: 1000px) {
+
+    header {
+        width: 100%;
+        height: 30vh;
+        background-size: cover;
+        background: url("../image/BG.jpg") no-repeat 50% 60%;
+
+    }
+
     .logo {
         position: fixed;
         top: 0;
@@ -270,15 +278,15 @@ nav ul li a {
 
     nav ul {
         max-height: 0;
-        background: #340949;
+        background: #c7ceea;
     }
 
     nav.black ul {
-        background: #230933;
+        background: #c7ceea;
     }
 
     .showing {
-        max-height: 34em;
+        max-height: 45em;
     }
 
     nav ul li {
