--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -26,6 +26,12 @@ header {
 
 }
 
+.headtext {
+    padding-top: 10%;
+    color: white;
+    text-shadow: 1px 0 0 grey, 0 -1px 0 grey, 0 1px 0 grey, -1px 0 0 grey;
+    font-family: 'Nanum Gothic Coding', monospace;
+}
 
 .content {
     width: 90%;
