--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,17 +1,22 @@
-head{}
+head {
+}
+
 body {
     background: url("../image/BGblue.png") repeat 70% 70%;
     font-family: "Helvetica Neue", sans-serif;
     font-weight: lighter;
 }
-a{
+
+a {
     color: black;
     font-family: "Helvetica Neue", sans-serif;
     font-weight: lighter;
 }
+
 a :hover {
 
 }
+
 h1 {
     color: Black;
     font-size: 50px;
@@ -19,8 +24,8 @@ h1 {
     padding-right: 5%;
 }
 
-.foot{
-   width: 100%;
+.foot {
+    width: 100%;
     padding-top: -10%;
     height: 5%;
     background-color: white;
@@ -58,14 +63,14 @@ h1 {
     margin-bottom: 1rem;
 }
 
-.form-label-group>input,
-.form-label-group>label {
+.form-label-group > input,
+.form-label-group > label {
     padding: var(--input-padding-y) var(--input-padding-x);
     height: auto;
     border-radius: 2rem;
 }
 
-.form-label-group>label {
+.form-label-group > label {
     position: absolute;
     top: 0;
     left: 0;
@@ -82,20 +87,19 @@ h1 {
     transition: all .1s ease-in-out;
 }
 
-
 .form-label-group input:not(:placeholder-shown) {
     padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
     padding-bottom: calc(var(--input-padding-y) / 3);
 }
 
-.form-label-group input:not(:placeholder-shown)~label {
+.form-label-group input:not(:placeholder-shown) ~ label {
     padding-top: calc(var(--input-padding-y) / 3);
     padding-bottom: calc(var(--input-padding-y) / 3);
     font-size: 12px;
     color: #777;
 }
 
-@media (max-width: 1000px){
+@media (max-width: 1000px) {
     .bg-image {
         background: url("../image/BG.jpg") no-repeat 70% 70%;
         background-size: cover;
