--- a/src/main/resources/static/css/events.css
+++ b/src/main/resources/static/css/events.css
@@ -15,15 +15,10 @@
     color: black;
 }
 
-.p2{
-    font-size: 50px;
-    padding-left: 5%;
-    color: black;
+.exploreMore {
     float: right;
-    padding-right: 5%;
-
-
 }
+
 .card1 {
     grid-column: 1;
     grid-row: 1;
