--- a/src/main/resources/static/css/MyTicket.css
+++ b/src/main/resources/static/css/MyTicket.css
@@ -33,7 +33,12 @@ li {
     margin: auto;
     text-align: center;
 }
+.ticket-event {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
 
+    padding: 2%;
+}
 .title {
     color: grey;
     font-size: 18px;
