--- a/src/main/resources/static/css/society.css
+++ b/src/main/resources/static/css/society.css
@@ -14,6 +14,13 @@
     border: 3vm grey;
   }
 
+.avt2{
+    border-radius: 50%;
+    width: 8vmax;
+    height: 8vmax;
+    border: 3vm grey;
+}
+
 .avatar{
     text-align: center;
     margin-top: -32%;
@@ -27,13 +34,33 @@
 h2{
     margin-left: 5%;
     width: 90%;
+    font-size: small;
+}
+h1{
+    color: #333333;
 }
 
 
+.eventcard{
+    width: 30%;
+}
+
+.center{
+text-align: center;}
 
 
-
-
+grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    background-color: #2196F3;
+    padding: 10px;
+}
+.grid-item {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
 
 
 
