--- a/src/main/resources/static/css/myPages.css
+++ b/src/main/resources/static/css/myPages.css
@@ -16,26 +16,45 @@ footer{
     font-weight: normal;
     color: black;
     text-align: right;
-    position: absolute;
-    right: 0%;
-    bottom: 0;
     left: 0;
+    bottom: 0;
+    width: 100%;}
 
+.card-img-top{
+    margin-left: auto;
+    margin-right: auto;
 
+}
+
+.title{
+    padding-left: 2%;
+}
+
+.cards {
+    width: 95%;
+    position: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+a{
+    color: white;
 }
 h1{
     text-align: left;
 }
 h1,h2{
+
     color: white;
     text-align: center;
 }
 img
 {
 max-height: 60%;
-    max-width: 80%;
+    max-width: 100%;
     margin: 0;
 }
+
 
 card{
     text-align: center;
@@ -46,13 +65,17 @@ card{
 
     padding: 2%;
 }
+
+.card-img-top{
+    text-align: center;
+    position: center;
+}
+
 .title {
     color: grey;
     font-size: 18px;
 }
-.uproar{
-    padding-right: 2%;
-}
+
 .centre{
     text-align: center;
 }
