--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -39,6 +39,10 @@ article {
     float: right;
     width: 30%;
     padding: 10px;
+    position: absolute;
+    top: 9%;
+    right: 12%;
+
 }
 
 .map {
