--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -30,6 +30,7 @@ body {
     padding: 50px 40% 50px 50px;
     background-color: #ffffff;
     width: 95%;
+    height: 80%;
     margin-left: auto;
     margin-right: auto;
 }
