added payment successful page, ironic as payments arent creating tickets, looking into it

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -28,7 +28,7 @@ body {
 .article {
 
     padding: 50px 40% 50px 50px;
-    background-color: #ffffff;
+    background-color: rgb(248, 255, 247);
     width: 95%;
     height: 80%;
     margin-left: auto;
