--- a/src/main/resources/static/css/society.css
+++ b/src/main/resources/static/css/society.css
@@ -4,15 +4,22 @@
     width: 80%;
     position: center;
     height: auto;
-   margin-left: 10%;
+    margin-left: 10%;
     margin-top: -10%;}
 
 .avt{
-  border-radius: 50%;
+    border-radius: 50%;
     width: 18vmax;
     height: 18vmax;
     border: 3vm grey;
-  }
+}
+
+.avt2{
+    border-radius: 50%;
+    width: 8vmax;
+    height: 8vmax;
+    border: 3vm grey;
+}
 
 .avatar{
     text-align: center;
@@ -27,29 +34,47 @@
 h2{
     margin-left: 5%;
     width: 90%;
+    font-size: small;
+}
+h1{
+    color: #333333;
 }
 
 
+.eventcard{
+    width: 30%;
+}
+
+.center{
+    text-align: center;}
+
+
+grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    background-color: #2196F3;
+    padding: 10px;
+}
+.grid-item {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
 
 
 
-
-
-
-/*
 @media (max-width: 1000px) {
-.mainblock{
-    background-color: #DEF3FD;
-    width: 80%;
-    position: center;
-    height: 200%;
-    margin-left: 10%;
-    margin-top: -20%;
-}
+    .mainblock{
+        background-color: #DEF3FD;
+        width: 80%;
+        position: center;
+        height: 200%;
+        margin-left: 10%;
+        margin-top: -20%;
+    }
 
 
 
 
 }
-
- */
