--- a/src/main/resources/static/css/society.css
+++ b/src/main/resources/static/css/society.css
@@ -49,7 +49,7 @@ h1{
     text-align: center;}
 
 
-grid-container {
+.grid-container {
     display: grid;
     grid-template-columns: auto auto auto;
     background-color: #2196F3;
